--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
             </p>
             <h3>Professional Experience</h3>
-            <h4 id="company-name">Wingify Software Pvt Ltd</h4>
+            <h4 id="company-name">None</h4>
             <p id="job-title"><strong>Support Engineer (Technical Support)</strong></p>
             <p id="job-responsibilities">Job Responsbilities</p>
             <p>
             <ul>
-                <li>Answer customer queries over email / ticketing system</li>
+                <li>Answer customer qu
+                 eries over email / ticketing system</li>
                 <li>Interact with our engineering team to get software issues and bugs resolved</li>
                 <li>Occasionally interact with customers over Skype or telephone</li>
                 <li>Contribute ideas to the team on how customers can be delighted</li></ul>
@@ -49,7 +50,7 @@
                     <td>H.S.C (Science Stream)</td>
                     <td>C.B.S.E. India</td>
                     <td>89%</td>
-                    <td>2017</td>
+                    <td>2019</td>
                 </tr>
                 <tr>
                     <td>C</td>
@@ -82,8 +83,6 @@
                 <li>
                 <span id="course-name">CS101: Introduction to Computer Science - Building a Web Crawler</span> - Udacity.com</li>
                 <li>
-                <span id="course-name">CS50x – Introduction to Computer Science I</span> – edX.org & Harvard University</li>
-                <li>
                 <span id="course-name">Calculus One</span> - Ohio State University & Coursera.org</li>
                 <li>
                 <span id="course-name">Introduction to Finance</span> - Coursera.org & University of Michigan</li>
@@ -101,9 +100,7 @@
             <h3>Certifications / Awards:</h3>
             <p>
             <ul>
-                <li>Scored highest in ACCA P1 – Governance, Risk & Ethics exam – June 2012 session amongst full time international students at Kaplan Financial, London.</li>
-                <li>Interviewed by ACCA for “international ACCA student in UK”, interview published in January 2012 edition of ACCA Student Accountant Magazine.</li>
-                <li>Interviewed by ACCA for “international ACCA student in UK”, interview published in January 2012 edition of ACCA Student Accountant Magazine.</li></ul>
+                
             </p>
             <h3>Personal Information:</h3>
             <p>
@@ -111,7 +108,7 @@
                 <li>
                 A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.
                 <li>
-                <span id="course-name">Languages Known:</span>English, Hindi, Gujarati and Sindhi</li>
+                <span id="course-name">Languages Known:</span>English,hindi and a bit of sankrit as well.</li>
                 <li>
                 <span id="course-name">Hobbies:</span>I love reading Finance and IT related books / magazines, playing Chess, swimming, listening music, surfing Internet, self-learning through e-courses.</li> </ul>
             </p>
