--- a/index.html
+++ b/index.html
@@ -22,16 +22,9 @@
             </p>
             <h3>Professional Experience</h3>
             <h4 id="company-name">None</h4>
-            <p id="job-title"><strong>Support Engineer (Technical Support)</strong></p>
+            <p id="job-title"><strong>Currently Unemployeed</strong></p>
             <p id="job-responsibilities">Job Responsbilities</p>
-            <p>
-            <ul>
-                <li>Answer customer qu
-                 eries over email / ticketing system</li>
-                <li>Interact with our engineering team to get software issues and bugs resolved</li>
-                <li>Occasionally interact with customers over Skype or telephone</li>
-                <li>Contribute ideas to the team on how customers can be delighted</li></ul>
-            </p>
+            
             <h3>Educational Qualifications</h3>
             <table>
                 <tr id="heading">
@@ -74,19 +67,6 @@
             <h3>Independent Courses</h3>
             <p>
             <ul>
-                <li>
-                <span id="course-name">HTML & CSS for Beginners – Web Fundamentals</span> – Codecademy.com</li>
-                <li>
-                <span id="course-name">Python – Fundamentals and Dynamic Programming </span> - Codecademy.com</li>
-                <li>
-                <span id="course-name">JavaScript – Programming Basics, JS Apps and Build Games </span> - Codecademy.com</li>
-                <li>
-                <span id="course-name">CS101: Introduction to Computer Science - Building a Web Crawler</span> - Udacity.com</li>
-                <li>
-                <span id="course-name">Calculus One</span> - Ohio State University & Coursera.org</li>
-                <li>
-                <span id="course-name">Introduction to Finance</span> - Coursera.org & University of Michigan</li>
-            </ul>
             <h3>Technical Skills</h3>
             <p>
             <ul>
