--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <tr>
                     <td>C</td>
                     <td>IIIT VADODARA India</td>
-                    <td>C Grade</td>
+                    <td>None rewarded Grade</td>
                     <td>2022</td>
                 </tr>
                 <tr>
